admin_demo/admin_demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-demo
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: admin-demo
  template:
    metadata:
      labels:
        app: admin-demo
    spec:
      containers:
      - image: docker.io/caguilsepulveda/admin_demo:develop-67b5ad4
        name: admin-demo
        ports:
        - containerPort: 80
