admin_demo/admin_demo-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin-demo
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: admin-demo
  type: LoadBalancer
